--- a/urls4irl/templates/index.html
+++ b/urls4irl/templates/index.html
@@ -2,19 +2,21 @@
 {% block content %}
 
 {% if user %}
-<h1>Welcome {{ user }}</h1>
+<div class="d-flex justify-content-center flex-row">
+    <h1>Welcome {{ user }}</h1>
+</div>
 {% endif %}
 
-<div class="d-flex justify-content-center flex-column">
-            
-    <div class="btn-group">
-        <a class="btn btn-primary" href="{{url_for('login')}}">Login</a>
-        <a class="btn btn-primary" href="{{url_for('register_user')}}">Register</a>
-    </div>
+<div class="d-flex justify-content-center flex-row"> 
+
+    <a class="btn btn-primary mx-3" href="{{url_for('login')}}">Login</a>
+    <a class="btn btn-primary mx-3" href="{{url_for('register_user')}}">Register</a>
 </div>
 
 {% if user %}
-<a class="btn btn-primary" href="{{url_for('logout')}}">Logout?</a>
+<div class="d-flex justify-content-center flex-row my-3">
+    <a class="btn btn-primary" href="{{url_for('logout')}}">Logout?</a>
+</div>
 {% endif %}
 
 {% endblock %}
