--- a/urls4irl/templates/login.html
+++ b/urls4irl/templates/login.html
@@ -9,16 +9,16 @@
             <legend class="border-bottom mb-4">Login!</legend>
             <div class="form-group">
                 {{ login_form.username.label(class="form-control-label")}}
-                {{ login_form.username(class="form-control form-control-lg")}}
+                {{ login_form.username(class="form-control form-control-lg" + (" is-invalid" if login_form.username.errors else "")) }}
             </div>
             <div class="form-group">
                 {{ login_form.password.label(class="form-control-label")}}
-                {{ login_form.password(class="form-control form-control-lg")}}
+                {{ login_form.password(class="form-control form-control-lg" + (" is-invalid" if login_form.password.errors else "")) }}
             </div>
         </fieldset>
-        <div class="form-group">
-            {{ login_form.submit(class="btn btn-primary")}}
-            <a class="btn btn-primary" href="{{url_for('register_user')}}">Register</a>
+        <div class="form-group d-flex">
+            {{ login_form.submit(class="btn btn-primary col-4 mr-4")}}
+            <a class="btn btn-primary col-7" href="{{url_for('register_user')}}">Register</a>
         </div>
     </form>
 
