--- a/urls4irl/templates/register_user.html
+++ b/urls4irl/templates/register_user.html
@@ -2,33 +2,79 @@
 {% block content %}
 
 <div class="d-flex justify-content-center">
-    <form method="POST" action="">
+    <!-- https://www.reddit.com/r/flask/comments/nuhtmx/trouble_with_bootstrap_form_validation_alerts/ -->
+    <form method="POST" action="" novalidate>
         {{ register_form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Register!</legend>
             <div class="form-group">
                 {{ register_form.username.label(class="form-control-label")}}
-                {{ register_form.username(class="form-control form-control-lg")}}
+                {% if register_form.username.errors %}
+                    {{ register_form.username(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in register_form.username.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ register_form.username(class="form-control form-control-lg")}}
+                {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.email.label(class="form-control-label")}}
-                {{ register_form.email(class="form-control form-control-lg")}}
+                {% if register_form.email.errors %}
+                    {{ register_form.email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in register_form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ register_form.email(class="form-control form-control-lg")}}
+                {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.confirm_email.label(class="form-control-label")}}
-                {{ register_form.confirm_email(class="form-control form-control-lg")}}
+                {% if register_form.confirm_email.errors %}
+                    {{ register_form.confirm_email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in register_form.confirm_email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ register_form.confirm_email(class="form-control form-control-lg")}}
+                {% endif %}
             </div>
             <div class="form-group">
                 {{ register_form.password.label(class="form-control-label")}}
-                {{ register_form.password(class="form-control form-control-lg")}}
+                {% if register_form.password.errors %}
+                    {{ register_form.password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in register_form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ register_form.password(class="form-control form-control-lg")}}
+                {% endif %}                
             </div>
             <div class="form-group">
                 {{ register_form.confirm_password.label(class="form-control-label")}}
-                {{ register_form.confirm_password(class="form-control form-control-lg")}}
+                {% if register_form.confirm_password.errors %}
+                    {{ register_form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in register_form.confirm_password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ register_form.confirm_password(class="form-control form-control-lg")}}
+                {% endif %}    
             </div>
         </fieldset>
-        <div class="form-group">
-            {{ register_form.submit(class="btn btn-primary")}}
+        <div class="form-group d-flex justify-content-center">
+            {{ register_form.submit(class="btn btn-primary col-12")}}
         </div>
     </form>
 </div>
