--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -1,19 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
 
-{% if user %}
-<div class="d-flex justify-content-center flex-row">
-    <h1>Welcome {{ user }}</h1>
-</div>
-{% endif %}
 
+<!-- Can get rid of these ASAP, need a splash page for unregistered users -->
+{% if not current_user.is_authenticated %}
 <div class="d-flex justify-content-center flex-row"> 
 
     <a class="btn btn-primary mx-3" href="{{url_for('login')}}">Login</a>
     <a class="btn btn-primary mx-3" href="{{url_for('register_user')}}">Register</a>
 </div>
 
-{% if user %}
+{% else %}
+<div class="d-flex justify-content-center flex-row">
+    <h1>Hello there  {{current_user.username}}.</h1>
+</div>
+<div class="d-flex justify-content-center flex-row my-3">
+    <a class="btn btn-primary" href="{{url_for('create_utub')}}">Create a UTub!</a>
+</div>
 <div class="d-flex justify-content-center flex-row my-3">
     <a class="btn btn-primary" href="{{url_for('logout')}}">Logout?</a>
 </div>
