--- a/urls4irl/templates/add_user_to_utub.html
+++ b/urls4irl/templates/add_user_to_utub.html
@@ -3,24 +3,24 @@
 
 <div class="d-flex justify-content-center">
     <form method="POST" action="" novalidate>
-        {{ utub_form.hidden_tag() }}
+        {{ utub_new_user_form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Create a UTub!</legend>
+            <legend class="border-bottom mb-4">Add a user to this UTub!</legend>
             <div class="form-group">
-                {{ utub_form.name.label(class="form-control-label")}}
-                {% if utub_form.name.errors %}
-                    {{ utub_form.name(class="form-control form-control-lg is-invalid") }}
+                {{ utub_new_user_form.username.label(class="form-control-label")}}
+                {% if utub_new_user_form.username.errors %}
+                    {{ utub_new_user_form.username(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in utub_form.name.errors %}
+                        {% for error in utub_new_user_form.username.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ utub_form.name(class="form-control form-control-lg")}}
+                    {{ utub_new_user_form.username(class="form-control form-control-lg")}}
                 {% endif %}
             </div>
         <div class="form-group d-flex justify-content-center">
-            {{ utub_form.submit(class="btn btn-primary col-12")}}
+            {{ utub_new_user_form.submit(class="btn btn-primary col-12")}}
         </div>
     </form>
 </div>
