--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -20,6 +20,9 @@
             <h3>UTub: {{single_utub.name}}</h3> 
         </div>
         <div class="d-flex justify-content-center flex-row">
+            <h5>Members</h5> 
+        </div>
+        <div class="d-flex justify-content-center flex-row">
             <ul>
                 <li>UTub Owner: {{single_utub.created_by.username}}</li>
             {% for user in single_utub.users %}
@@ -27,20 +30,35 @@
             {% endfor %}
             </ul>
         </div>
-        {% if single_utub.created_by.id == current_user.id %}
-            <div class="d-flex justify-content-center flex-row mb-5">
-                <a class="btn btn-success btn-sm" href="{{url_for('add_user', utub_id=single_utub.id)}}">Add a user!</a>
-            </div>
-        {% endif %}
+        <div class="d-flex justify-content-center flex-row">
+            <h5>URLs</h5> 
+        </div>
+        <div class="d-flex justify-content-center flex-row">
+            <ul>
+            {% for link in single_utub.urls %}
+                <li>Link in "{{single_utub.name}}": {{link.url_string}}</li>
+            {% endfor %}
+            </ul>
+        </div>
+        <div class="d-flex justify-content-center">
+            {% if single_utub.created_by.id == current_user.id %}
+                <div class="d-flex justify-content-center flex-row mb-5">
+                    <a class="btn btn-success btn-sm col-8 mx-3" href="{{url_for('add_user', utub_id=single_utub.id)}}">Add a user!</a>
+                    <a class="btn btn-success btn-sm col-8 mx-3" href="{{url_for('add_url', utub_id=single_utub.id)}}">Add a URL!</a>
+                </div>
+            {% else %}
+                <div class="d-flex justify-content-center flex-row mb-5">
+                    <a class="btn btn-success btn-md col-12 px-4" href="{{url_for('add_url', utub_id=single_utub.id)}}">Add a URL!</a>
+                </div>
+            {% endif %}
+        </div>
     {% endfor %}
 {% endif %}
 <div class="d-flex justify-content-center">
     <div class="border-top pt-1">
         <div class="d-flex justify-content-center flex-row my-3">
-            <a class="btn btn-primary" href="{{url_for('create_utub')}}">Create a UTub!</a>
-        </div>
-        <div class="d-flex justify-content-center flex-row my-3">
-            <a class="btn btn-primary" href="{{url_for('logout')}}">Logout?</a>
+            <a class="btn btn-primary col-7 mx-3" href="{{url_for('create_utub')}}">Create a UTub!</a>
+            <a class="btn btn-primary col-4 mx-3" href="{{url_for('logout')}}">Logout</a>
         </div>
     </div>
 </div>
