--- a/urls4irl/templates/login.html
+++ b/urls4irl/templates/login.html
@@ -3,17 +3,35 @@
 
 
 <div class="d-flex justify-content-center">
-    <form method="POST" action="">
+    <form method="POST" action="" novalidate>
         {{ login_form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Login!</legend>
             <div class="form-group">
                 {{ login_form.username.label(class="form-control-label")}}
-                {{ login_form.username(class="form-control form-control-lg" + (" is-invalid" if login_form.username.errors else "")) }}
+                {% if login_form.username.errors %}
+                    {{ login_form.username(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in login_form.username.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ login_form.username(class="form-control form-control-lg")}}
+                {% endif %}
             </div>
             <div class="form-group">
                 {{ login_form.password.label(class="form-control-label")}}
-                {{ login_form.password(class="form-control form-control-lg" + (" is-invalid" if login_form.password.errors else "")) }}
+                {% if login_form.password.errors %}
+                    {{ login_form.password(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in login_form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ login_form.password(class="form-control form-control-lg")}}
+                {% endif %}
             </div>
         </fieldset>
         <div class="form-group d-flex">
