--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -5,6 +5,7 @@
 
 <div class="d-flex justify-content-center flex-row">
     <h1>Hello there  {{current_user.username}}.</h1>
+    <h1>Hello again  {{current_user.username}}.</h1>
 </div>
 <div class="d-flex justify-content-center flex-row">
     <p>Find your UTubs below</p>
