User can now delete either a UTub and/or a URL (with the correct permissions).

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -48,7 +48,9 @@
                     {% if link.user_id == current_user.id or single_utub.created_by.id == current_user.id %}
                         <div class="d-flex justify-content-center flex-row">
                             <a class="btn btn-info btn-sm col-6 mb-3 mx-3" href="#">Add tags</a>
-                            <a class="btn btn-danger btn-sm col-6 mb-3" href="#">Delete this URL</a>
+                            <form action="{{url_for('delete_url', utub_id=single_utub.id, url_id=link.url_id)}}" method="post">
+                                <button class="btn btn-danger btn-sm col-6 mb-3" href="">Delete this URL</button>
+                            </form>
                         </div>
                     {% endif %}
                 <br>
