--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -45,9 +45,26 @@
             {% for link in single_utub.utub_urls %}
                 <li>Link in "{{single_utub.name}}": {{link.url_in_utub.url_string}}</li>
                 <small>Added by {{link.user_that_added_url.username}}</small>
+                    <ul>
+                        <small>Tags:</small>
+                        {% for tag in single_utub.utub_url_tags %}
+                            {% if tag.url_id == link.url_id %}
+                                <li><small>{{tag.tag_item.tag_string}}</small></li>
+                                    {% if single_utub.created_by.id == current_user.id %}
+                                        <div class="d-flex justify-content-center">
+                                                <small class="text-muted">
+                                                    <form action="{{url_for('remove_tag', utub_id=single_utub.id, url_id=link.url_id, tag_id=tag.tag_id)}}" method="post">
+                                                        <button class="btn btn-link btn-sm" href="">Delete tag</button>
+                                                    </form>
+                                                </small>
+                                        </div>
+                                    {% endif %}
+                            {% endif %}
+                        {% endfor %}              
+                    </ul>
                     {% if link.user_id == current_user.id or single_utub.created_by.id == current_user.id %}
                         <div class="d-flex justify-content-center flex-row">
-                            <a class="btn btn-info btn-sm col-6 mb-3 mx-3" href="#">Add tags</a>
+                            <a class="btn btn-info btn-sm col-6 mb-3 mx-3" href="{{url_for('add_tag', utub_id=single_utub.id, url_id=link.url_id)}}">Add tags</a>
                             <form action="{{url_for('delete_url', utub_id=single_utub.id, url_id=link.url_id)}}" method="post">
                                 <button class="btn btn-danger btn-sm col-6 mb-3" href="">Delete this URL</button>
                             </form>
