--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -34,6 +34,19 @@
                 <li>UTub Owner: {{single_utub.created_by.username}}</li>
             {% for user in single_utub.users %}
                 <li>User in "{{single_utub.name}}": {{user.username}}</li>
+                {% if single_utub.created_by.id == current_user.id and user.id != single_utub.created_by.id %}
+                    <div class="d-flex justify-content-center flex-row">
+                        <form action="{{url_for('delete_user', utub_id=single_utub.id, user_id=user.id)}}" method="post">
+                            <button class="btn btn-danger btn-sm mb-3 mx-3" href="">Delete this User</button>
+                        </form>
+                    </div>
+                {% elif user.id == current_user.id and single_utub.created_by.id != current_user.id %}
+                    <div class="d-flex justify-content-center flex-row">
+                        <form action="{{url_for('delete_user', utub_id=single_utub.id, user_id=user.id)}}" method="post">
+                            <button class="btn btn-danger btn-sm mb-3 mx-3" href="">Leave Utub</button>
+                        </form>
+                    </div>
+                {% endif %}
             {% endfor %}
             </ul>
         </div>
