Added JSON output of UTubs.

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -15,6 +15,9 @@
         <p>No UTubs for you :(</p>
     </div>
 {% else %}
+    <script type="text/javascript">
+        var jsArrayOfItems = JSON.parse('{{utubs_json|tojson|safe}}');
+    </script>
     {% for single_utub in utubs %}
         <div class="d-flex justify-content-center flex-row">
             <h3>UTub: {{single_utub.name}}</h3> 
