JS functionality introduced. All buttons and associated hrefs update on UTub change. Modals and individualized pages (removing/adding buttons and functionality based on UserID) still need work

--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -11,8 +11,16 @@ form {
     flex-flow: column;
 }
 
+img {
+    max-width:100%;
+}
+
 .panel {
     border-radius: 30px;
+}
+
+.unselectedUTub {
+    display: none;
 }
 
 span.tag {
@@ -38,8 +46,12 @@ span.tag {
     background: gray;
 }
 
-#InfoDeck {
+#UTubInfoDeck {
     background: blue;
+}
+
+#URLInfoDeck {
+    background: purple;
 }
 
 #ChatDeck {
