--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -17,8 +17,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- FontAwesome CSS -->
+    <!-- https://fontawesome.com/v4/get-started/ -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../static/styles/app.css">
+    <link rel="stylesheet" href="/static/styles/app.css">
+    
+    <!-- Add jQuery to aid with DOM manipulation -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
     <title>URLS4IRL</title>
 </head>
@@ -80,20 +88,13 @@
             <h1>Welcome to URLS 4 IRL.</h1>
             <span>REH</span>
         </div>
-        
+
         {% block content %}
         {% endblock %}
     </section>
-    
-    <!-- Main Panel View -->
 
-    <!-- Not sure what this script tag is for yet... -->
-    <script src="" async defer></script>
-    <!-- Add jQuery to aid with DOM manipulation -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!--  -->
-    <script src="../static/scripts/app.js"></script>
+    <!-- Main Panel View -->
+    
 </body>
 
 </html>
