--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -101,10 +101,15 @@
                 <h5>Actions</h5> 
                 <a id="addUser" class="btn btn-success btn-sm mb-3 mx-1" href="#">Add a User</a>
                 
-                <button class="btn btn-warning btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal">Remove this User</button>
-                <!-- <form action="#" method="post"> -->
-                    <!-- <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/> -->
-                    <!-- Modal -->
+                
+                <form id="removeUserTemp" action="#" method="post">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <button class="btn btn-warning btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal">Remove this User</button>
+                </form>
+
+                <!-- <form action="#" method="post">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    Modal
                     <div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog" aria-labelledby="removeUserModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
@@ -118,18 +123,22 @@
                                     This user will no longer have the ability to view or add URLs in the UTub.
                                 </div>
                                 <div class="modal-footer">
-                                <a type="a" class="btn btn-secondary" data-dismiss="modal">I Changed My Mind</a>
-                                <a type="a" id="removeUser" href="#" class="btn btn-danger">Remove</a>
+                                <button type="a" class="btn btn-secondary" data-dismiss="modal">I Changed My Mind</button>
+                                <button type="a" id="removeUser" href="#" class="btn btn-danger">Remove User</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                <!-- </form> -->
+                </form> -->
                 
-                <a class="btn btn-danger btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal">Delete this UTub</a>
-                <form action="#" method="post">
+                <form id="deleteUTubTemp" action="#" method="post">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    <!-- Modal -->
+                    <button class="btn btn-danger btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal" href="#">Delete this UTub</button>
+                </form>
+                
+                <!-- <form action="#" method="post">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    Modal
                     <div class="modal fade" id="deleteUTubModal" tabindex="-1" role="dialog" aria-labelledby="deleteUTubModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
@@ -143,13 +152,13 @@
                                     URLs in the UTub will no longer be accessible. This action cannot be undone.
                                 </div>
                                 <div class="modal-footer">
-                                <a type="a" class="btn btn-secondary" data-dismiss="modal">I Changed My Mind</a>
-                                <a type="a" id="deleteUTub" href="#" class="btn btn-danger">Delete</a>
+                                <button type="a" class="btn btn-secondary" data-dismiss="modal">I Changed My Mind</button>
+                                <button type="a" id="deleteUTub" href="#" class="btn btn-danger">Delete UTub</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </form>
+                </form> -->
             </div>
            
             <h5>Description</h5>
