Updated AccessURL in home.js for links with or without 'https://'

--- a/urls4irl/templates/add_url_to_utub.html
+++ b/urls4irl/templates/add_url_to_utub.html
@@ -19,6 +19,7 @@
                     {{ utub_new_url_form.url_string(class="form-control form-control-lg")}}
                 {% endif %}
             </div>
+            <!-- insert field for tags -->
         <div class="form-group d-flex justify-content-center">
             {{ utub_new_url_form.submit(class="btn btn-primary col-12")}}
         </div>
