--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -181,8 +181,9 @@
             <h2>URL Information</h2>
 
             <h5>Actions</h5> 
-            <button class="btn btn-primary btn-sm mb-3 mx-1" id="URLLink" onclick="AccessLink()">Access URL</button>
+            <button class="btn btn-success btn-sm mb-3 mx-1" id="URLLink" onclick="AccessLink()">Access URL</button>
             <a class="btn btn-info btn-sm mb-3 mx-1" href="#">Add tags</a>
+            <a class="btn btn-primary btn-sm mb-3 mx-1" href="#">Edit URL</a>
             <a class="btn btn-danger btn-sm mb-3 mx-1" id="DeleteURL" href="#">Delete this URL</a>
 
             <h5>Description</h5>
