Pulled latest routes, forms, and add_tag template from main. Ensured tags could not be added to selectedURL after selectedUTub was changed by user.

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -181,10 +181,10 @@
             <h2>URL Information</h2>
 
             <h5>Actions</h5> 
-            <button class="btn btn-success btn-sm mb-3 mx-1" id="URLLink" onclick="AccessLink()">Access URL</button>
-            <a class="btn btn-info btn-sm mb-3 mx-1" href="#">Add tags</a>
-            <a class="btn btn-primary btn-sm mb-3 mx-1" href="#">Edit URL</a>
-            <a class="btn btn-danger btn-sm mb-3 mx-1" id="DeleteURL" href="#">Delete this URL</a>
+            <button id="URLLink" class="btn btn-success btn-sm mb-3 mx-1" onclick="AccessLink()">Access URL</button>
+            <a id="addTags" class="btn btn-info btn-sm mb-3 mx-1" href="#">Add tags</a>
+            <a id="EditURL" class="btn btn-primary btn-sm mb-3 mx-1" href="#">Edit URL</a>
+            <a id="DeleteURL" class="btn btn-danger btn-sm mb-3 mx-1" href="#">Delete this URL</a>
 
             <h5>Description</h5>
             <p id="URLInfo" class="lead">
